I need more pu ssr

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://10.1.224.7:1433;databaseName=INDDB
+#spring.datasource.username=INDUSER
+#spring.datasource.password=skmhINDUSER88
+spring.datasource.url=jdbc:sqlserver://10.11.15.62:1433;databaseName=CheckSysDB
+spring.datasource.username=CHKUSER
+spring.datasource.password=1234
+
+
+spring.thymeleaf.cache=false
+#spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.mode=HTML
+#spring.thymeleaf.prefix=/templates/
